@@ -1,3 +1,9 @@
+2009-02-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* elf64-hppa.c: Remove PARAMS macro.  Replace PTR with void *.  Convert
+	functions to C90.
+	* elf64-hppa.h: Likewise.
+
 2009-02-06  Joseph Myers  <joseph@codesourcery.com>
 
 	* elfxx-mips.c (_bfd_mips_elf_section_processing): Remove special
